cloudformation/kubernetes.template
AWSTemplateFormatVersion: 2010-09-09
Description: Kubernetes Architecture

Parameters:
  KubeVpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  KubePublicSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Public Subnet.
    Type: String
    Default: 10.0.0.0/24

  KubePrivateSubnetCIDR:
    Description: Please enter the IP range (CIDR notation) for the Private Subnet.
    Type: String
    Default: 10.0.1.0/24

Mappings:
  RegionMap:
    us-east-1:
      'AMI': 'ami-09d3b3274b6c5d4aa'
      'PEM': 'mhellnerdev-us-east-kp'
    us-west-1:
      'AMI': 'ami-017c001a88dd93847'
      'PEM': 'mhellnerdev-us-west-kp'
    us-west-2:
      'AMI': 'ami-0d593311db5abb72b'
      'PEM': 'mhellner-us-west2-kp'


Resources:
  # VPC Description
  KubeProdVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref KubeVpcCIDR
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: 'default'
      Tags:
        - Key: Name
          Value: Kube Prod VPC
        - Key: kubernetes.io/cluster/circlelabs
          Value: shared

  # Internet Gateway
  KubeProdIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Kube Prod IGW
        - Key: kubernetes.io/cluster/circlelabs
          Value: shared

  KubeProdIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref KubeProdIGW
      VpcId: !Ref KubeProdVpc

  # Public Subnet
  KubeProdPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KubeProdVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref KubePublicSubnetCIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Kube Prod Public Subnet
        - Key: kubernetes.io/cluster/circlelabs
          Value: shared

  # Private Subnet
  KubeProdPrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref KubeProdVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref KubePrivateSubnetCIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Kube Prod Private Subnet
        - Key: kubernetes.io/cluster/circlelabs
          Value: shared

  # Elastic IP's
  KubeProdNgwEip:
    Type: AWS::EC2::EIP
    DependsOn: KubeProdIGWAttachment
    Properties:
      Domain: vpc

  # NAT Gateways
  KubeProdNgw:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt KubeProdNgwEip.AllocationId
      SubnetId: !Ref KubeProdPublicSubnet

  # Public Route Table
  KubeProdPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref KubeProdVpc
      Tags:
        - Key: Name
          Value: Kube Prod Public Route

  KubeProdIGWRoute:
    Type: AWS::EC2::Route
    DependsOn: KubeProdIGWAttachment
    Properties:
      RouteTableId: !Ref KubeProdPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref KubeProdIGW
  
  # Associate Public Route Table
  KubeProdPublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref KubeProdPublicRouteTable
      SubnetId: !Ref KubeProdPublicSubnet

  # Private Route Table
  KubeProdPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref KubeProdVpc
      Tags:
        - Key: Name
          Value: Kube Prod Private Route

  # Associate NAT Gateway 
  KubeProdPrivateNgwRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref KubeProdPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref KubeProdNgw

  KubeProdPrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref KubeProdPrivateRouteTable
      SubnetId: !Ref KubeProdPrivateSubnet
