cloudformation/wordpress-vpc.template
AWSTemplateFormatVersion: 2010-09-09
Description: VPC for Wordpress Architercture

# Parameters section
Parameters:
  WordpressVpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  WordpressPublicSubnetAz1CIDR:
    Description: Please enter the IP range (CIDR notation) for the Public Subnet for Availability Zone 1
    Type: String
    Default: 10.0.0.0/24

  WordpressPublicSubnetAz2CIDR:
    Description: Please enter the IP range (CIDR notation) for the Public Subnet for Availability Zone 2
    Type: String
    Default: 10.0.1.0/24

  WordpressPrivateAppSubnetAz1CIDR:
    Description: Please enter the IP range (CIDR notation) for the Private App Subnet for Availability Zone 1
    Type: String
    Default: 10.0.2.0/24

  WordpressPrivateAppSubnetAz2CIDR:
    Description: Please enter the IP range (CIDR notation) for the Private App Subnet for Availability Zone 2
    Type: String
    Default: 10.0.3.0/24

  WordpressPrivateDataSubnetAz1CIDR:
    Description: Please enter the IP range (CIDR notation) for the Private Data Subnet for Availability Zone 1
    Type: String
    Default: 10.0.4.0/24

  WordpressPrivateDataSubnetAz2CIDR:
    Description: Please enter the IP range (CIDR notation) for the Private Data Subnet for Availability Zone 2
    Type: String
    Default: 10.0.5.0/24

# Resources Section
Resources:
  # VPC Description
  WordpressProdVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref WordpressVpcCIDR
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      InstanceTenancy: 'default'
      Tags:
        - Key: Name
          Value: Wordpress Prod VPC
        - Key: Project
          Value: Wordpress-Prod

  # Internet Gateway
  WordpressProdIGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Wordpress Prod IGW
        - Key: Project
          Value: Wordpress Prod

  WordpressProdIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref WordpressProdIGW
      VpcId: !Ref WordpressProdVpc

  # Public Subnets
  WordpressProdPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WordpressProdVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref WordpressPublicSubnetAz1CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Wordpress Prod Public Subnet AZ1
        - Key: Project
          Value: Wordpress Prod

  WordpressProdPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WordpressProdVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref WordpressPublicSubnetAz2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Wordpress Prod Public Subnet AZ2
        - Key: Project
          Value: Wordpress Prod

  # Private App Subnets
  WordpressProdPrivateAppSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WordpressProdVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref WordpressPrivateAppSubnetAz1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Wordpress Prod Private App Subnet AZ1
        - Key: Project
          Value: Wordpress Prod

  WordpressProdPrivateAppSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WordpressProdVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref WordpressPrivateAppSubnetAz2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Wordpress Prod Private App Subnet AZ2
        - Key: Project
          Value: Wordpress Prod

  # Private Data subnets. This is where NFS will live.
  WordpressProdPrivateDataSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WordpressProdVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !Ref WordpressPrivateDataSubnetAz1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Wordpress Prod Private Data Subnet AZ1
        - Key: Project
          Value: Wordpress Prod

  WordpressProdPrivateDataSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref WordpressProdVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: !Ref WordpressPrivateDataSubnetAz2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Wordpress Prod Private Data Subnet AZ2
        - Key: Project
          Value: Wordpress Prod

  # Elastic IP's
  WordpressProdNgw1Eip:
    Type: AWS::EC2::EIP
    DependsOn: WordpressProdIGWAttachment
    Properties:
      Domain: vpc

  WordpressProdNgw2Eip:
    Type: AWS::EC2::EIP
    DependsOn: WordpressProdIGWAttachment
    Properties:
      Domain: vpc

  # NAT Gateways
  WordpressProdNgw1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt WordpressProdNgw1Eip.AllocationId
      SubnetId: !Ref WordpressProdPublicSubnet1

  WordpressProdNgw2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt WordpressProdNgw2Eip.AllocationId
      SubnetId: !Ref WordpressProdPublicSubnet2

  # Public Route Table
  WordpressProdPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WordpressProdVpc
      Tags:
        - Key: Name
          Value: Wordpress Prod Public Routes

  WordpressProdPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: WordpressProdIGWAttachment
    Properties:
      RouteTableId: !Ref WordpressProdPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref WordpressProdIGW

  WordpressProdPublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WordpressProdPublicRouteTable
      SubnetId: !Ref WordpressProdPublicSubnet1

  WordpressProdPublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WordpressProdPublicRouteTable
      SubnetId: !Ref WordpressProdPublicSubnet2

  # Private Route Table 1
  WordpressProdPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WordpressProdVpc
      Tags:
        - Key: Name
          Value: Wordpress Prod Private Routes AZ1

  # Associate NAT Gateway 1 with App Route 1
  WordpressProdPrivateAppRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WordpressProdPrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref WordpressProdNgw1

  # Associate App and Data Subnets
  WordpressProdPrivateAppSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WordpressProdPrivateRouteTable1
      SubnetId: !Ref WordpressProdPrivateAppSubnet1

  WordpressProdPrivateDataSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WordpressProdPrivateRouteTable1
      SubnetId: !Ref WordpressProdPrivateDataSubnet1

  # Private Route Table 2
  WordpressProdPrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref WordpressProdVpc
      Tags:
        - Key: Name
          Value: Wordpress Prod Private Routes AZ2

  # Associate NAT Gateway with App route 2
  WordpressProdPrivateAppRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref WordpressProdPrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref WordpressProdNgw2

  # Associate App and Data subnets
  WordpressProdPrivateAppSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WordpressProdPrivateRouteTable2
      SubnetId: !Ref WordpressProdPrivateAppSubnet2

  WordpressProdPrivateDataSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WordpressProdPrivateRouteTable2
      SubnetId: !Ref WordpressProdPrivateDataSubnet2

  # Security Groups
  WordpressProdSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Wordpress Prod SSH Security Group
      GroupDescription: Wordpress Prod SSH Security Group
      VpcId: !Ref WordpressProdVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Wordpress Prod SSH Security Group
        - Key: Project
          Value: Wordpress Prod

  WordpressProdALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Wordpress Prod ALB Security Group
      GroupDescription: Wordpress ALB Security Group
      VpcId: !Ref WordpressProdVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Wordpress Prod ALB Security Group
        - Key: Project
          Value: Wordpress Prod

  WordpressProdWebserverSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Wordpress Prod Webserver Security Group
      GroupDescription: Wordpress Webserver Security Group
      VpcId: !Ref WordpressProdVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref WordpressProdALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref WordpressProdALBSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref WordpressProdSSHSecurityGroup
      Tags:
        - Key: Name
          Value: Wordpress Prod Webserver Security Group
        - Key: Project
          Value: Wordpress Prod

  WordpressProdDatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Wordpress Prod Database Security Group
      GroupDescription: Wordpress Database Security Group
      VpcId: !Ref WordpressProdVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref WordpressProdWebserverSecurityGroup
      Tags:
        - Key: Name
          Value: Wordpress Prod Database Security Group
        - Key: Project
          Value: Wordpress Prod

  WordpressProdEFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: Wordpress Prod EFS Security Group
      GroupDescription: Wordpress EFS Security Group
      VpcId: !Ref WordpressProdVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !Ref WordpressProdWebserverSecurityGroup
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref WordpressProdSSHSecurityGroup
      Tags:
        - Key: Name
          Value: Wordpress Prod EFS Security Group
        - Key: Project
          Value: Wordpress Prod

  # This resource type is needed to reference self for inbound rule on above resource
  WordpressProdEFSSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref WordpressProdEFSSecurityGroup
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      SourceSecurityGroupId: !Ref WordpressProdEFSSecurityGroup

  # RDS Subnet Group
  WordpressDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupName: Wordpress Prod Database Subnets
      DBSubnetGroupDescription: Wordpress Prod Database Subnets
      SubnetIds:
        - !Ref WordpressProdPrivateDataSubnet1
        - !Ref WordpressProdPrivateDataSubnet2
      Tags:
        - Key: Project
          Value: Wordpress Prod

  # RDS Instance
  RDSDBInstance:
    Type: AWS::RDS::DBInstance
    DeletionPolicy: Delete
    Properties:
      AllocatedStorage: 20
      AvailabilityZone: !Select [1, !GetAZs '']
      BackupRetentionPeriod: 1
      DBInstanceClass: 'db.t2.micro'
      DBInstanceIdentifier: 'wordpress-db'
      DBName: 'wordpress_db'
      DBSubnetGroupName: !Ref WordpressDBSubnetGroup
      Engine: 'mysql'
      EngineVersion: '5.7.39'
      MultiAZ: false
      MasterUsername: 'dbadmin'
      MasterUserPassword: 'dbadmin123' #TODO Resolve from SSM or put in Parameters with NoEcho
      PubliclyAccessible: false
      VPCSecurityGroups:
        - !GetAtt WordpressProdDatabaseSecurityGroup.GroupId
